# SAXSpy

./: .gitignore
SAXSpy/: ala.out  main.py  nocom.xyz  poly_at.csv  poly_atomic.csv  pyproject.toml
SAXSpy/cg_structures/: CG_AA_level.ipynb  SASDAC2.xyz  SASDAH2.xyz  SASDAJ6.xyz  SASDAQ2.xyz  SASDAW3.xyz  ala.xyz
SAXSpy/pepsi-saxs_data/: SASDAJ6_fit1_model1.out
SAXSpy/source_code/: alanine_testing.ipynb  atom_type_radii_optimization.ipynb  atom_type_radii_optimization_copilot.ipynb  debyecalc_Iq.py  formfactor.py  formfactor_isabel.py  hydration_shell.py  individual_radii_optimizer.py  iterations.ipynb  load_testdata.py  main_testing.ipynb  mapping_aas.py  marco.pqr  marco_FormFactors.txt  marco_output.xyz  marco_test.ipynb  optimize.ipynb  optimized_atom_type_radii.py  polyfit.py  rot_lib2.py  rotamer_library.py  unique_radii_optimizer.py
SAXSpy/source_code/pepsi-saxs_data/: SASDAC2_fit1_model1.out  SASDAH2_fit1_model1.out  SASDAQ2_fit1_model1.out  SASDAW3_fit1_model1.out
experimental_data/: SASDAC2_fit1.fit  SASDAH2_fit1.fit  SASDAJ6_fit1.fit  SASDAQ2_fit1.fit  SASDAW3_fit1.fit
