[project]
name = "saxspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

